--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,40 +1,83 @@
-<mvc:View controllerName="ch.novobc.sapui5.controller.Detail"
-	xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-	xmlns="sap.m">
-	<Page id="detail" title="{i18n>DetailTitle}" showNavButton="true" navButtonPress="handleNavButtonPress" >
-		<ObjectHeader id="_IDGenObjectHeader1" title="{email}" >
-			<attributes>
-				<ObjectAttribute id="_IDGenObjectAttribute1" text="{lastName}"/>
-				<ObjectAttribute id="_IDGenObjectAttribute2" text="{firstName}"/>
-				<ObjectAttribute id="_IDGenObjectAttribute3" text="{participantId}"/>
-			</attributes>
-		</ObjectHeader>
-		<Table
+<mvc:View
+    controllerName="ch.novobc.sapui5.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core"
+    xmlns:forms="sap.ui.layout.form"
+    xmlns:uxap="sap.uxap"
+    xmlns:blockcolor="sap.uxap.sample.SharedBlocks"
+>
+    <Page
+        id="detail"
+        showNavButton="false"
+        navButtonPress="handleNavButtonPress"
+    >
+        <ObjectHeader
+            id="_IDGenObjectHeader1"
+            title="{email}"
+        >
+            <attributes>
+                <ObjectAttribute
+                    id="_IDGenObjectAttribute1"
+                    text="{lastName}"
+                />
+                <ObjectAttribute
+                    id="_IDGenObjectAttribute2"
+                    text="{firstName}"
+                />
+                <ObjectAttribute
+                    id="_IDGenObjectAttribute3"
+                    text="{participantId}"
+                />
+            </attributes>
+        </ObjectHeader>
+        <Table items="{ path: 'presentations' }">
+            <columns>
+                <Column width="12em">
+                    <Text text="{i18n>objectPageInformation}" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Panel
+                            expandable="true"
+                            headerText="{presentation/timeslot} : {presentation/presentationDesc}"
+                            width="auto"
+                            class="sapUiResponsiveMargin"
+                        >
+                            <content>
+                                <forms:SimpleForm
+                                    labelSpanL="4"
+                                    labelSpanM="4"
+                                    editable="false"
+                                    labelSpanS="4"
+                                    emptySpanL="0"
+                                    emptySpanM="0"
+                                    emptySpanS="0"
+                                    maxContainerCols="2"
+                                    layout="ResponsiveGridLayout"
+                                    width="100%"
+                                >
+                                    <core:Title text="Allgemeine Information" />
+                                    <Label text="Zimmer" />
+                                    <Text text="101" />
 
-			items="{ path: 'presentations' }">
-			<columns>
-				<Column
+                                    <Label text="Zeit" />
+                                    <Text text="{presentation/timeslot}" />
+                                </forms:SimpleForm>
+                            </content>
+                        </Panel>
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
 
-				width="12em">
-					<Text text="Titel" />
-				</Column>
-			</columns>
-			<items>
-				<ColumnListItem vAlign="Middle">
-					<cells>
-						<Text
-
-						text="{presentation/presentationDesc}" />
-					</cells>
-				</ColumnListItem>
-			</items>
-		</Table>
-		<footer>
-			<Bar id="_IDGenBar1">
-				<contentRight>
-					<Button id="_IDGenButton1" text="{i18n>OrderButtonText}" type="Accept" icon="sap-icon://accept" press="handleOrder"/>
-				</contentRight>
-			</Bar>
-		</footer>
-	</Page>
+        <footer>
+            <Bar id="_IDGenBar1">
+                <contentRight />
+            </Bar>
+        </footer>
+    </Page>
 </mvc:View>
